# Cpp-Result

./: CMakeLists.txt  README.md
examples/: BasicExample.cpp  HandlerExample.cpp  ResultComparison.cpp  ResultValueExample.cpp  TouchResultValue.cpp
src/: Result.hpp
